--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,16 @@ body{
 }
 
 h1{
-    color:rgb(47, 47, 47);
+    color:#E3E3E3;
     text-align: center;
     font-weight: 800;
     font-size: 72px;
 }
 
 h2{
-    color:rgb(102, 102, 102);
+    color:#E3E3E3;
     text-align: center;
     font-weight: 400;
 }
+
 
