--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
     font-family: 'Roboto', sans-serif;
 }
 
+
+
 body{
     margin: 0;
     border:none;
@@ -16,7 +18,8 @@ h1{
     color:#E3E3E3;
     text-align: center;
     font-weight: 800;
-    font-size: 72px;
+    font-size: 64px;
+    margin-bottom:  100px;
 }
 
 h2{
