--- a/src/Pages/styles/Blog.css
+++ b/src/Pages/styles/Blog.css
@@ -26,18 +26,26 @@
 
 .Blog #post-title{
     font-size: 32px;
+    margin-bottom: 80px;
+    text-align: left;
 }
 
 
 .Blog #post-tags{
     border-radius: 10px;
     padding: 0 10px;
-    background-color: yellow;
+    background-color: #81CA95;
     width: fit-content;
 }
 
 
-
+.Blog .post-card{
+    display: flex;
+    justify-content: space-around;
+    align-items: left;
+    flex-direction: column;
+    padding: 25px;
+}
 
 
 
