--- a/src/components/BlogPost/BlogPost.css
+++ b/src/components/BlogPost/BlogPost.css
@@ -1,19 +1,30 @@
 .BlogPost .remark li{
     border: none;
     color:#E3E3E3;
+    line-height: 2rem;
+}
+
+.BlogPost .remark a{
+    color:#5F97F6;
+}
+
+.BlogPost .remark strong{
+    color:#81CA95;
 }
 
 .BlogPost .remark p{
     color:#E3E3E3;
     font-weight: 300;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
+    font-size: 1.2em;
+    line-height: 2rem;
 }
 
 .BlogPost .remark h1{
     font-size: 30px;
 }
 .BlogPost .remark h2{
-    font-size: 24px;
+    font-size: 30px;
     text-align: left;
 }
 
@@ -25,6 +36,8 @@
 .BlogPost{
     width: 70%;
 }
+
+
 
 
 .blog-post-container{
