--- a/src/Pages/styles/Blog.css
+++ b/src/Pages/styles/Blog.css
@@ -32,12 +32,37 @@
 
 
 .Blog #post-tags{
-    border-radius: 10px;
-    padding: 0 10px;
-    background-color: #81CA95;
+    color: whitesmoke;
+    border-radius: 8px;
+    padding: 7px 40px;
+    background: linear-gradient(-45deg, #e73c7e, #5F97F6, #81CA95);
+	background-size: 400% 400%;
+	animation: gradient 10s ease-in infinite;
     width: fit-content;
+    margin-right: 10px;
 }
 
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+
+
+.Blog .div-tags-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
 
 .Blog .post-card{
     display: flex;
