--- a/src/components/BlogPost/BlogPost.css
+++ b/src/components/BlogPost/BlogPost.css
@@ -13,7 +13,25 @@
 }
 
 .BlogPost .remark pre{
-    box-shadow: 0px 0px 2px #89B4F8 ;
+    box-shadow: 0px 0px 2.5px #89B4F8 ;
+    animation: infinite animatedShadow 10s;
+}
+
+@keyframes animatedShadow {
+    0%{
+        box-shadow: 0px 0px 2.5px #89B4F8 ;
+    }
+    50%{
+        box-shadow: 0px 0px 10px #89B4F8 ;
+    }
+    100%{
+        box-shadow: 0px 0px 2.5px #89B4F8 ;
+    }
+}
+
+.BlogPost .remark code{
+    line-height: 2.5 !important;
+    font-size: 18px !important;
 }
 
 .BlogPost .remark strong{
