--- a/src/components/BlogPost/BlogPost.css
+++ b/src/components/BlogPost/BlogPost.css
@@ -1,7 +1,10 @@
 .BlogPost .remark li{
-    border: none;
     color:#E3E3E3;
+    font-weight: 300;
+    font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
+    font-size: 1.2em;
     line-height: 2rem;
+    border: none;
 }
 
 .BlogPost .remark a{
